syntax = "proto3";
package net;
option java_package = "net";
option java_outer_classname = "Ps";
option java_multiple_files = true;

service PS {
    rpc PushAFMatrix (MatrixMessage) returns (MatrixMessage){}
    rpc AFMatrixDimPartition(KeyValueListMessage) returns (PartitionListMessage){}
    rpc GetIndexOfSparseDim(SListMessage) returns (SLKVListMessage){}
    rpc GetSparseDimSize(RequestMetaMessage) returns (LMessage){}
    rpc SentSparseDimSizeAndInitParams(InitVMessage) returns (BMessage){}
    rpc Barrier(RequestMetaMessage) returns (BMessage){}
    rpc GetMaxAndMinValueOfEachFeature(MaxAndMinArrayMessage) returns (MaxAndMinArrayMessage){}
    rpc GetNeededParams(SListMessage) returns (SFKVListMessage){}
    rpc SendSFMap(SFKVListMessage) returns (SMessage){};
    rpc SentCurIndexNum(LMessage) returns (SMessage){};
    rpc SentInitedT(IFMessage) returns(IMessage){};
    rpc PushLocalViAccessNum(FMessage) returns(BMessage){};
    rpc PullOtherWorkerAccessForVi(RequestMetaMessage) returns(FMessage){};
    rpc PushVANumAndGetCatPrunedRecord(LIListMessage) returns(LListMessage){};
    rpc PullPartitionedVset(IMessage) returns(ListSetMessage){};
    rpc AddInitedPartitionedVSet(LIMessage) returns (BMessage){};
    rpc PushDiskAccessForV(InsertjIntoViMessage) returns(FMessage){};

}

message FListMessage{
    repeated float f=1;
}

message InsertjIntoViMessage{
    FListMessage diskTimeArray=1;
    int32 insertI=2;
    int64 j=3;
}

message ListSetMessage{
    repeated LListMessage ls=1;
}


message InitVMessage{
    int64 l=1;
    repeated ILListKVMessage list=2;
}

message ILListKVMessage{
    int32 key=1;
    repeated int64 llist=2;
}

message FMessage{
    float f=1;
}
message IFMessage{
    int32 i=1;
    float f=2;
}


message RequestMetaMessage {
    string host = 1;
}

message BMessage{
    bool b=1;
}

message LMessage{
    int64 l=1;
}

message LIMessage{
    int64 l=1;
    int32 i=2;
}

message IMessage{
    int32 i=1;
}

message PartitionMessage{
    string key=1;
    repeated int32 value=2;
}

message PartitionListMessage{
    repeated PartitionMessage Data=1;
}

message KeyValueMessage{
    int64 key=1;
    int64 value=2;
}

message SLKVMessage{
    string key=1;
    int64 value=2;
}

message KeyValueListMessage{
    int32 size=1;
    repeated KeyValueMessage keyValueList=2;
}

message MatrixMessage{
    string key=1;
    int32 row=2;
    int32 cols=3;
    repeated float data=4;
}

message AFMatrixMessage{
    RequestMetaMessage meta=1;
    MatrixMessage AFMatrix=2;
}

message IListMessage{
    int32 size=1;
    repeated int32 list=2;
}

message SListMessage{
    int32 size=1;
    repeated string list=2;
}

message SMessage{
    string str=1;
}

message SLKVListMessage{
    int32 size=1;
    repeated SLKVMessage list=2;
}

message MaxAndMinArrayMessage{
    repeated float max=1;
    repeated float min=2;
}

message SFKVListMessage{
    repeated SFKVMessage list=2;
}

message SFKVMessage{
    string key=1;
    float value=2;
}


message LIListMessage{
    int32 size=1;
    repeated LIMessage list=2;
}

message LListMessage{
    repeated int64 l=2;
}








